// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InvoiceForm Should render empty form 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 hOJKqu"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="StyledBox-sc-13pk1d4-0 IRSNj"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 ffeAql"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 dRJqWv"
        >
          <div
            className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
          >
            <label
              className="StyledText-sc-1sadyjn-0 bKLvLm"
            >
              Invoice number
            </label>
            <div
              className="StyledBox-sc-13pk1d4-0 gZSidW"
            >
              <div
                className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
              >
                <input
                  autoComplete="off"
                  className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                  name="number"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 ffeAql"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 clLqce"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 ffeAql"
          >
            <h5
              className="StyledHeading-sc-1rdh4aw-0 djDvmr"
              style={
                Object {
                  "minWidth": "100px",
                }
              }
            >
              Sender
            </h5>
          </div>
          <div
            aria-hidden={false}
            className="Collapsible__AnimatedBox-sc-15kniua-0 dMYckW StyledBox-sc-13pk1d4-0 IRSNj"
            open={true}
          >
            <div
              className="StyledBox-sc-13pk1d4-0 ffeAql"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 clLqce"
              >
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Name
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <button
                      aria-label="Open Drop"
                      className="Select__StyledSelectDropButton-sc-17idtfo-1 gQjIFS StyledButton-sc-323bzc-0 jfbKsv"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 erazuK"
                      >
                        <div
                          className="StyledBox-sc-13pk1d4-0 XINUX"
                        >
                          <div
                            className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                          >
                            <input
                              autoComplete="off"
                              className="Select__SelectTextInput-sc-17idtfo-0 lmyIUy StyledTextInput-sc-1x30a0s-0 jfnKzs"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Select"
                              readOnly={true}
                              size="medium"
                              tabIndex="-1"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          className="StyledBox-sc-13pk1d4-0 eLQtUu"
                          style={
                            Object {
                              "minWidth": "auto",
                            }
                          }
                        >
                          <svg
                            aria-label="FormDown"
                            className="StyledIcon-ofa7kd-0 dSllCE"
                            viewBox="0 0 24 24"
                          >
                            <polyline
                              fill="none"
                              points="18 9 12 15 6 9"
                              stroke="#000"
                              strokeWidth="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 clLqce"
              >
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Street
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="sender_street1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Street name and number"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Street
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="sender_street2"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Apartment, unit, office, etc"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    City
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="sender_city"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    State
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="sender_state"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Country
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="sender_country"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    ZIP code
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="sender_zipcode"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 clLqce"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 ffeAql"
          >
            <h5
              className="StyledHeading-sc-1rdh4aw-0 djDvmr"
              style={
                Object {
                  "minWidth": "100px",
                }
              }
            >
              Recipient
            </h5>
          </div>
          <div
            aria-hidden={false}
            className="Collapsible__AnimatedBox-sc-15kniua-0 dMYckW StyledBox-sc-13pk1d4-0 IRSNj"
            open={true}
          >
            <div
              className="StyledBox-sc-13pk1d4-0 Tiesv"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 clLqce"
              >
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Name
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_company_name"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 clLqce"
              >
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Street
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_street1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Street name and number"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Street
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_street2"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Apartment, unit, office, etc"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    City
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_city"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    State
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_state"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Country
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_country"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    ZIP code
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_zipcode"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 IRSNj"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 IRSNj"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 ffeAql"
          >
            <h5
              className="StyledHeading-sc-1rdh4aw-0 djDvmr"
              style={
                Object {
                  "minWidth": "100px",
                }
              }
            >
              Invoice Details
            </h5>
          </div>
          <div
            aria-hidden={false}
            className="Collapsible__AnimatedBox-sc-15kniua-0 dMYckW StyledBox-sc-13pk1d4-0 IRSNj"
            open={true}
          >
            <div
              className="StyledBox-sc-13pk1d4-0 IRSNj"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 ffeAql"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Status
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <button
                        aria-label="Open Drop"
                        className="Select__StyledSelectDropButton-sc-17idtfo-1 gQjIFS StyledButton-sc-323bzc-0 jfbKsv"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        type="button"
                      >
                        <div
                          className="StyledBox-sc-13pk1d4-0 erazuK"
                        >
                          <div
                            className="StyledBox-sc-13pk1d4-0 XINUX"
                          >
                            <div
                              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                            >
                              <input
                                autoComplete="off"
                                className="Select__SelectTextInput-sc-17idtfo-0 lmyIUy StyledTextInput-sc-1x30a0s-0 duvNfq"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                placeholder="Select"
                                readOnly={true}
                                tabIndex="-1"
                                type="text"
                              />
                            </div>
                          </div>
                          <div
                            className="StyledBox-sc-13pk1d4-0 eLQtUu"
                            style={
                              Object {
                                "minWidth": "auto",
                              }
                            }
                          >
                            <svg
                              aria-label="FormDown"
                              className="StyledIcon-ofa7kd-0 dSllCE"
                              viewBox="0 0 24 24"
                            >
                              <polyline
                                fill="none"
                                points="18 9 12 15 6 9"
                                stroke="#000"
                                strokeWidth="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Currency
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <button
                        aria-label="Open Drop"
                        className="Select__StyledSelectDropButton-sc-17idtfo-1 gQjIFS StyledButton-sc-323bzc-0 jfbKsv"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        type="button"
                      >
                        <div
                          className="StyledBox-sc-13pk1d4-0 erazuK"
                        >
                          <div
                            className="StyledBox-sc-13pk1d4-0 XINUX"
                          >
                            <div
                              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                            >
                              <input
                                autoComplete="off"
                                className="Select__SelectTextInput-sc-17idtfo-0 lmyIUy StyledTextInput-sc-1x30a0s-0 duvNfq"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                placeholder="Select"
                                readOnly={true}
                                tabIndex="-1"
                                type="text"
                              />
                            </div>
                          </div>
                          <div
                            className="StyledBox-sc-13pk1d4-0 eLQtUu"
                            style={
                              Object {
                                "minWidth": "auto",
                              }
                            }
                          >
                            <svg
                              aria-label="FormDown"
                              className="StyledIcon-ofa7kd-0 dSllCE"
                              viewBox="0 0 24 24"
                            >
                              <polyline
                                fill="none"
                                points="18 9 12 15 6 9"
                                stroke="#000"
                                strokeWidth="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Date created
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                          name="date_created"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          type="date"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Date due
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                          name="date_due"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          type="date"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 ffeAql"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Net amount, undefined
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                          maxLength={22}
                          name="net_amount"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Tax rate, %
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                          name="tax_rate"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          value={NaN}
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Tax amount, undefined
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                          disabled={true}
                          name="tax_amount"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          value="NaN"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Gross amount, undefined
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                          disabled={true}
                          name="gross_amount"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          value="NaN"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 ffeAql"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 clLqce"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 ffeAql"
          >
            <h5
              className="StyledHeading-sc-1rdh4aw-0 djDvmr"
              style={
                Object {
                  "minWidth": "100px",
                }
              }
            >
              Comments
            </h5>
          </div>
          <div
            aria-hidden={false}
            className="Collapsible__AnimatedBox-sc-15kniua-0 dMYckW StyledBox-sc-13pk1d4-0 IRSNj"
            open={true}
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <textarea
                  className="StyledTextArea-sc-17i3mwp-0 ctlBar"
                  name="comment"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`InvoiceForm Should render form with sender and recipient selected 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 hOJKqu"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="StyledBox-sc-13pk1d4-0 IRSNj"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 ffeAql"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 dRJqWv"
        >
          <div
            className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
          >
            <label
              className="StyledText-sc-1sadyjn-0 bKLvLm"
            >
              Invoice number
            </label>
            <div
              className="StyledBox-sc-13pk1d4-0 gZSidW"
            >
              <div
                className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
              >
                <input
                  autoComplete="off"
                  className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                  name="number"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 ffeAql"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 clLqce"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 ffeAql"
          >
            <h5
              className="StyledHeading-sc-1rdh4aw-0 djDvmr"
              style={
                Object {
                  "minWidth": "100px",
                }
              }
            >
              Sender
            </h5>
          </div>
          <div
            aria-hidden={false}
            className="Collapsible__AnimatedBox-sc-15kniua-0 dMYckW StyledBox-sc-13pk1d4-0 IRSNj"
            open={true}
          >
            <div
              className="StyledBox-sc-13pk1d4-0 ffeAql"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 clLqce"
              >
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Name
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <button
                      aria-label="Open Drop"
                      className="Select__StyledSelectDropButton-sc-17idtfo-1 gQjIFS StyledButton-sc-323bzc-0 jfbKsv"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 erazuK"
                      >
                        <div
                          className="StyledBox-sc-13pk1d4-0 XINUX"
                        >
                          <div
                            className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                          >
                            <input
                              autoComplete="off"
                              className="Select__SelectTextInput-sc-17idtfo-0 lmyIUy StyledTextInput-sc-1x30a0s-0 jfnKzs"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Select"
                              readOnly={true}
                              size="medium"
                              tabIndex="-1"
                              type="text"
                              value="Alice"
                            />
                          </div>
                        </div>
                        <div
                          className="StyledBox-sc-13pk1d4-0 eLQtUu"
                          style={
                            Object {
                              "minWidth": "auto",
                            }
                          }
                        >
                          <svg
                            aria-label="FormDown"
                            className="StyledIcon-ofa7kd-0 dSllCE"
                            viewBox="0 0 24 24"
                          >
                            <polyline
                              fill="none"
                              points="18 9 12 15 6 9"
                              stroke="#000"
                              strokeWidth="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 clLqce"
              >
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Street
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="sender_street1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Street name and number"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Street
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="sender_street2"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Apartment, unit, office, etc"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    City
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="sender_city"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    State
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="sender_state"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Country
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="sender_country"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    ZIP code
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="sender_zipcode"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 clLqce"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 ffeAql"
          >
            <h5
              className="StyledHeading-sc-1rdh4aw-0 djDvmr"
              style={
                Object {
                  "minWidth": "100px",
                }
              }
            >
              Recipient
            </h5>
          </div>
          <div
            aria-hidden={false}
            className="Collapsible__AnimatedBox-sc-15kniua-0 dMYckW StyledBox-sc-13pk1d4-0 IRSNj"
            open={true}
          >
            <div
              className="StyledBox-sc-13pk1d4-0 Tiesv"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 clLqce"
              >
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Name
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_company_name"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 clLqce"
              >
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Street
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_street1"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Street name and number"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Street
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_street2"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Apartment, unit, office, etc"
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    City
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_city"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    State
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_state"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    Country
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_country"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
                />
                <div
                  className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 bKLvLm"
                  >
                    ZIP code
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 gZSidW"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                        name="bill_to_zipcode"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 IRSNj"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 IRSNj"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 ffeAql"
          >
            <h5
              className="StyledHeading-sc-1rdh4aw-0 djDvmr"
              style={
                Object {
                  "minWidth": "100px",
                }
              }
            >
              Invoice Details
            </h5>
          </div>
          <div
            aria-hidden={false}
            className="Collapsible__AnimatedBox-sc-15kniua-0 dMYckW StyledBox-sc-13pk1d4-0 IRSNj"
            open={true}
          >
            <div
              className="StyledBox-sc-13pk1d4-0 IRSNj"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 ffeAql"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Status
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <button
                        aria-label="Open Drop"
                        className="Select__StyledSelectDropButton-sc-17idtfo-1 gQjIFS StyledButton-sc-323bzc-0 jfbKsv"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        type="button"
                      >
                        <div
                          className="StyledBox-sc-13pk1d4-0 erazuK"
                        >
                          <div
                            className="StyledBox-sc-13pk1d4-0 XINUX"
                          >
                            <div
                              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                            >
                              <input
                                autoComplete="off"
                                className="Select__SelectTextInput-sc-17idtfo-0 lmyIUy StyledTextInput-sc-1x30a0s-0 duvNfq"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                placeholder="Select"
                                readOnly={true}
                                tabIndex="-1"
                                type="text"
                              />
                            </div>
                          </div>
                          <div
                            className="StyledBox-sc-13pk1d4-0 eLQtUu"
                            style={
                              Object {
                                "minWidth": "auto",
                              }
                            }
                          >
                            <svg
                              aria-label="FormDown"
                              className="StyledIcon-ofa7kd-0 dSllCE"
                              viewBox="0 0 24 24"
                            >
                              <polyline
                                fill="none"
                                points="18 9 12 15 6 9"
                                stroke="#000"
                                strokeWidth="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Currency
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <button
                        aria-label="Open Drop"
                        className="Select__StyledSelectDropButton-sc-17idtfo-1 gQjIFS StyledButton-sc-323bzc-0 jfbKsv"
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        type="button"
                      >
                        <div
                          className="StyledBox-sc-13pk1d4-0 erazuK"
                        >
                          <div
                            className="StyledBox-sc-13pk1d4-0 XINUX"
                          >
                            <div
                              className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                            >
                              <input
                                autoComplete="off"
                                className="Select__SelectTextInput-sc-17idtfo-0 lmyIUy StyledTextInput-sc-1x30a0s-0 duvNfq"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                placeholder="Select"
                                readOnly={true}
                                tabIndex="-1"
                                type="text"
                              />
                            </div>
                          </div>
                          <div
                            className="StyledBox-sc-13pk1d4-0 eLQtUu"
                            style={
                              Object {
                                "minWidth": "auto",
                              }
                            }
                          >
                            <svg
                              aria-label="FormDown"
                              className="StyledIcon-ofa7kd-0 dSllCE"
                              viewBox="0 0 24 24"
                            >
                              <polyline
                                fill="none"
                                points="18 9 12 15 6 9"
                                stroke="#000"
                                strokeWidth="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Date created
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                          name="date_created"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          type="date"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Date due
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                          name="date_due"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          type="date"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 ffeAql"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Net amount, undefined
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                          maxLength={22}
                          name="net_amount"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Tax rate, %
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="StyledTextInput-sc-1x30a0s-0 duvNfq"
                          name="tax_rate"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          value={NaN}
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Tax amount, undefined
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                          disabled={true}
                          name="tax_amount"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          value="NaN"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 dRJqWv"
                >
                  <div
                    className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
                  >
                    <label
                      className="StyledText-sc-1sadyjn-0 bKLvLm"
                    >
                      Gross amount, undefined
                    </label>
                    <div
                      className="StyledBox-sc-13pk1d4-0 gZSidW"
                    >
                      <div
                        className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 yIdXy"
                      >
                        <input
                          autoComplete="off"
                          className="StyledTextInput-sc-1x30a0s-0 dlXaQi"
                          disabled={true}
                          name="gross_amount"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          value="NaN"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 ffeAql"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 clLqce"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 ffeAql"
          >
            <h5
              className="StyledHeading-sc-1rdh4aw-0 djDvmr"
              style={
                Object {
                  "minWidth": "100px",
                }
              }
            >
              Comments
            </h5>
          </div>
          <div
            aria-hidden={false}
            className="Collapsible__AnimatedBox-sc-15kniua-0 dMYckW StyledBox-sc-13pk1d4-0 IRSNj"
            open={true}
          >
            <div
              className="FormField__FormFieldBox-m9hood-0 eshLKp StyledBox-sc-13pk1d4-0 CAsMy"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 gZSidW"
              >
                <textarea
                  className="StyledTextArea-sc-17i3mwp-0 ctlBar"
                  name="comment"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
